--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -625,6 +625,8 @@
 
    "userType": "User type",
 
-   "selectUserType": "Select user type"
+   "selectUserType": "Select user type",
+
+   "loggingIn": "Logging in.."
 
 }
