url issue is solved.

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -627,6 +627,8 @@
 
    "selectUserType": "Select user type",
 
-   "loggingIn": "Logging in.."
+   "loggingIn": "Logging in..",
+
+   "loggingOut": "Logging out.."
 
 }
